--- a/README.asciidoc
+++ b/README.asciidoc
@@ -1,4 +1,10 @@
+
+image:https://img.shields.io/github/release/jmad/jmad-modelpack-service.svg?maxAge=1000["Latest release", link="https://github.com/jmad/jmad-modelpack-service/releases"]
 image:https://www.travis-ci.com/jmad/jmad-modelpack-service.svg?branch=master["Build Status", link="https://www.travis-ci.com/jmad/jmad-modelpack-service"]
+image:https://img.shields.io/github/license/jmad/jmad-modelpack-service.svg[]
+image:https://codecov.io/gh/jmad/jmad-modelpack-service/branch/master/graph/badge.svg["codecov", link="https://codecov.io/gh/jmad/jmad-modelpack-service"]
+image:https://api.codacy.com/project/badge/Grade/b830f8eafc0441199d126967bd87d08c["Codacy code quality", link="https://www.codacy.com/app/jmad/jmad-modelpack-service?utm_source=github.com&utm_medium=referral&utm_content=jmad/jmad-modelpack-service&utm_campaign=Badge_Grade"]
+
 
 # JMad Modelpackage Service
 
